--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "discord.js": "11.3.2",
     "mysql": "^2.15.0",
-    "node-schedule": "^1.3.0"
+    "node-schedule": "^1.3.0",
+    "uniqid": "^5.0.3"
   },
   "devDependencies": {},
   "scripts": {
