--- a/mysql_config_template.json
+++ b/mysql_config_template.json
@@ -1,6 +1,6 @@
 {
-	"host": "127.0.0.1",
-	"user": "",
-	"password": "",
-	"database": "TTTDiscordZL"
+  "host": "127.0.0.1",
+  "user": "",
+  "password": "",
+  "database": "TTTDiscordLink"
 }
